; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/rrenumd/extr_rrenumd.c_rrenum_snd_eachdst.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/rrenumd/extr_rrenumd.c_rrenum_snd_eachdst.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dst_list = type { %struct.dst_list* }
%struct.payload_list = type { i32 }

@dl_head = common dso_local global %struct.dst_list* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.payload_list*)* @rrenum_snd_eachdst to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rrenum_snd_eachdst(%struct.payload_list* %0) #0 {
  %2 = alloca %struct.payload_list*, align 8
  %3 = alloca %struct.dst_list*, align 8
  store %struct.payload_list* %0, %struct.payload_list** %2, align 8
  %4 = load %struct.dst_list*, %struct.dst_list** @dl_head, align 8
  store %struct.dst_list* %4, %struct.dst_list** %3, align 8
  br label %5

5:                                                ; preds = %12, %1
  %6 = load %struct.dst_list*, %struct.dst_list** %3, align 8
  %7 = icmp ne %struct.dst_list* %6, null
  br i1 %7, label %8, label %16

8:                                                ; preds = %5
  %9 = load %struct.payload_list*, %struct.payload_list** %2, align 8
  %10 = load %struct.dst_list*, %struct.dst_list** %3, align 8
  %11 = call i32 @rrenum_output(%struct.payload_list* %9, %struct.dst_list* %10)
  br label %12

12:                                               ; preds = %8
  %13 = load %struct.dst_list*, %struct.dst_list** %3, align 8
  %14 = getelementptr inbounds %struct.dst_list, %struct.dst_list* %13, i32 0, i32 0
  %15 = load %struct.dst_list*, %struct.dst_list** %14, align 8
  store %struct.dst_list* %15, %struct.dst_list** %3, align 8
  br label %5

16:                                               ; preds = %5
  ret void
}

declare dso_local i32 @rrenum_output(%struct.payload_list*, %struct.dst_list*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
